// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/notifications/NotificationContent.tsx > falls back to product logo when entity iconUrl is null 1`] = `
<div>
  <div
    class="css-k5cxwk"
    data-testid="notification-details"
    id="notification-details"
  >
    <div
      class="cursor-pointer"
    >
      <div
        class="css-1926jks"
      >
        <div
          class="css-k5cxwk"
          id="notification-title"
        >
          <span
            class="css-1y3vbql"
          >
            #103: chore(deps): update dependency eslint
          </span>
            
          <em
            class="css-xlxqv6"
          >
            3 years ago
          </em>
        </div>
        <div
          class="css-k5cxwk"
          id="notification-metadata"
        >
          <div
            class="css-1926jks"
          >
            <div
              class="css-1yqbixt"
              id="notification-entity"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  PR-123 Fix the bug
                </span>
              </div>
            </div>
            <div
              class="css-1yqbixt"
              id="notification-product"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  myorg/notifications-test
                </span>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-group"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationContent.tsx > hides entity section when bodyText is empty 1`] = `
<div>
  <div
    class="css-k5cxwk"
    data-testid="notification-details"
    id="notification-details"
  >
    <div
      class="cursor-pointer"
    >
      <div
        class="css-1926jks"
      >
        <div
          class="css-k5cxwk"
          id="notification-title"
        >
          <span
            class="css-1y3vbql"
          >
            #103: chore(deps): update dependency eslint
          </span>
            
          <em
            class="css-xlxqv6"
          >
            3 years ago
          </em>
        </div>
        <div
          class="css-k5cxwk"
          id="notification-metadata"
        >
          <div
            class="css-1926jks"
          >
            <div
              class="css-scnxu0"
              hidden=""
              id="notification-entity"
            >
              <div
                class="css-5fz2td"
              >
                <div
                  class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                >
                  <span
                    class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswpfqs _4cvr1fhb _1bah1h6o _2lx21bp4 _80om1kw7 _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rkol0p1 _1bsb7vkz _4t3i7vkz"
                    style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="_16jlkb7n _1o9zkb7n _i0dl1osq _1e0c1txw _1bsb1osq _4t3i1osq _2rkolb4i"
                      data-ssr-placeholder-ignored="true"
                      data-vc="avatar-image"
                      src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                    />
                  </span>
                </div>
                <span
                  class="css-x828h5"
                />
              </div>
            </div>
            <div
              class="css-1yqbixt"
              id="notification-product"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  myorg/notifications-test
                </span>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-group"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationContent.tsx > renders entity iconUrl as avatar when present 1`] = `
<div>
  <div
    class="css-k5cxwk"
    data-testid="notification-details"
    id="notification-details"
  >
    <div
      class="cursor-pointer"
    >
      <div
        class="css-1926jks"
      >
        <div
          class="css-k5cxwk"
          id="notification-title"
        >
          <span
            class="css-1y3vbql"
          >
            #103: chore(deps): update dependency eslint
          </span>
            
          <em
            class="css-xlxqv6"
          >
            3 years ago
          </em>
        </div>
        <div
          class="css-k5cxwk"
          id="notification-metadata"
        >
          <div
            class="css-1926jks"
          >
            <div
              class="css-scnxu0"
              id="notification-entity"
            >
              <div
                class="css-5fz2td"
              >
                <div
                  aria-labelledby="_r_2_"
                  class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                  role="img"
                >
                  <span
                    class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswpfqs _4cvr1fhb _1bah1h6o _2lx21bp4 _80om1kw7 _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rkol0p1 _1bsb7vkz _4t3i7vkz"
                    style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="_16jlkb7n _1o9zkb7n _i0dl1osq _1e0c1txw _1bsb1osq _4t3i1osq _2rkolb4i"
                      data-ssr-placeholder-ignored="true"
                      data-vc="avatar-image"
                      src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                    />
                  </span>
                  <span
                    hidden=""
                    id="_r_2_"
                  >
                    PR-123 Fix the bug
                  </span>
                </div>
                <span
                  class="css-x828h5"
                >
                  PR-123 Fix the bug
                </span>
              </div>
            </div>
            <div
              class="css-1yqbixt"
              id="notification-product"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  myorg/notifications-test
                </span>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-group"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationContent.tsx > renders group info with named actors when group size > 1 1`] = `
<div>
  <div
    class="css-k5cxwk"
    data-testid="notification-details"
    id="notification-details"
  >
    <div
      class="cursor-pointer"
    >
      <div
        class="css-1926jks"
      >
        <div
          class="css-k5cxwk"
          id="notification-title"
        >
          <span
            class="css-1y3vbql"
          >
            #103: chore(deps): update dependency eslint
          </span>
            
          <em
            class="css-xlxqv6"
          >
            3 years ago
          </em>
        </div>
        <div
          class="css-k5cxwk"
          id="notification-metadata"
        >
          <div
            class="css-1926jks"
          >
            <div
              class="css-scnxu0"
              id="notification-entity"
            >
              <div
                class="css-5fz2td"
              >
                <div
                  aria-labelledby="_r_3_"
                  class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                  role="img"
                >
                  <span
                    class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswpfqs _4cvr1fhb _1bah1h6o _2lx21bp4 _80om1kw7 _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rkol0p1 _1bsb7vkz _4t3i7vkz"
                    style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="_16jlkb7n _1o9zkb7n _i0dl1osq _1e0c1txw _1bsb1osq _4t3i1osq _2rkolb4i"
                      data-ssr-placeholder-ignored="true"
                      data-vc="avatar-image"
                      src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                    />
                  </span>
                  <span
                    hidden=""
                    id="_r_3_"
                  >
                    PR-123 Fix the bug
                  </span>
                </div>
                <span
                  class="css-x828h5"
                >
                  PR-123 Fix the bug
                </span>
              </div>
            </div>
            <div
              class="css-1yqbixt"
              id="notification-product"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  myorg/notifications-test
                </span>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-group"
            >
              <div
                class="css-5fz2td"
              >
                <ul
                  aria-label="avatar group"
                  class="_1e0c1txw _19121cl4 _vwz4kb7n _2mzuagmp _6rthze3t _1pfhze3t _12l2u2gc _ahbqze3t _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t"
                  id="_r_4_"
                >
                  <li
                    class="_6rthze3t _1pfhze3t _12l2x0bf _ahbqze3t"
                  >
                    <div
                      role="presentation"
                    >
                      <div
                        class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                        style="z-index: 5;"
                      >
                        <a
                          aria-label="User 1"
                          class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswh2mm _4cvr1fhb _1bah1h6o _2lx21bp4 _80omtlke _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rko1qll _14mj1qll _1bsb7vkz _4t3i7vkz _4tpu1g4v _ez1ykb7n _gcm1182g _eeh8kb7n _jlxit94y"
                          href="#"
                          style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                        >
                          <span
                            class="_1e0c1txw _1bsb1osq _4t3i1osq _bfhk7qp0 _w8l57vkz _17527vkz"
                          >
                            <span
                              aria-hidden="true"
                              class="_1e0c1o8l _vchhusvi _1o9zidpf _vwz4kb7n _y4ti1igz _bozg1mb9 _12va1onz _jcxd1r8n"
                            >
                              <svg
                                class="_1reo15vq _18m915vq _syaz1r31 _lcxvglyw _s7n4yfq0 _vc881r31 _1bsb1ejb _4t3i1ejb"
                                fill="none"
                                role="presentation"
                                viewBox="-4 -4 24 24"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M8 1.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4 4a4 4 0 1 1 8 0 4 4 0 0 1-8 0m-2 9a3.75 3.75 0 0 1 3.75-3.75h4.5A3.75 3.75 0 0 1 14 13v2h-1.5v-2a2.25 2.25 0 0 0-2.25-2.25h-4.5A2.25 2.25 0 0 0 3.5 13v2H2z"
                                  fill="currentcolor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </li>
                  <li
                    class="_6rthze3t _1pfhze3t _12l2x0bf _ahbqze3t"
                  >
                    <div
                      role="presentation"
                    >
                      <div
                        class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                        style="z-index: 4;"
                      >
                        <a
                          aria-label="User 2"
                          class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswh2mm _4cvr1fhb _1bah1h6o _2lx21bp4 _80omtlke _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rko1qll _14mj1qll _1bsb7vkz _4t3i7vkz _4tpu1g4v _ez1ykb7n _gcm1182g _eeh8kb7n _jlxit94y"
                          href="#"
                          style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                        >
                          <span
                            class="_1e0c1txw _1bsb1osq _4t3i1osq _bfhk7qp0 _w8l57vkz _17527vkz"
                          >
                            <span
                              aria-hidden="true"
                              class="_1e0c1o8l _vchhusvi _1o9zidpf _vwz4kb7n _y4ti1igz _bozg1mb9 _12va1onz _jcxd1r8n"
                            >
                              <svg
                                class="_1reo15vq _18m915vq _syaz1r31 _lcxvglyw _s7n4yfq0 _vc881r31 _1bsb1ejb _4t3i1ejb"
                                fill="none"
                                role="presentation"
                                viewBox="-4 -4 24 24"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M8 1.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4 4a4 4 0 1 1 8 0 4 4 0 0 1-8 0m-2 9a3.75 3.75 0 0 1 3.75-3.75h4.5A3.75 3.75 0 0 1 14 13v2h-1.5v-2a2.25 2.25 0 0 0-2.25-2.25h-4.5A2.25 2.25 0 0 0 3.5 13v2H2z"
                                  fill="currentcolor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </li>
                </ul>
                <span
                  class="css-x828h5"
                >
                  +
                  2
                   
                  updates from User 1
                   and others
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationContent.tsx > renders group info with unnamed actors when group size > 1 1`] = `
<div>
  <div
    class="css-k5cxwk"
    data-testid="notification-details"
    id="notification-details"
  >
    <div
      class="cursor-pointer"
    >
      <div
        class="css-1926jks"
      >
        <div
          class="css-k5cxwk"
          id="notification-title"
        >
          <span
            class="css-1y3vbql"
          >
            #103: chore(deps): update dependency eslint
          </span>
            
          <em
            class="css-xlxqv6"
          >
            3 years ago
          </em>
        </div>
        <div
          class="css-k5cxwk"
          id="notification-metadata"
        >
          <div
            class="css-1926jks"
          >
            <div
              class="css-scnxu0"
              id="notification-entity"
            >
              <div
                class="css-5fz2td"
              >
                <div
                  aria-labelledby="_r_9_"
                  class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                  role="img"
                >
                  <span
                    class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswpfqs _4cvr1fhb _1bah1h6o _2lx21bp4 _80om1kw7 _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rkol0p1 _1bsb7vkz _4t3i7vkz"
                    style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="_16jlkb7n _1o9zkb7n _i0dl1osq _1e0c1txw _1bsb1osq _4t3i1osq _2rkolb4i"
                      data-ssr-placeholder-ignored="true"
                      data-vc="avatar-image"
                      src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                    />
                  </span>
                  <span
                    hidden=""
                    id="_r_9_"
                  >
                    PR-123 Fix the bug
                  </span>
                </div>
                <span
                  class="css-x828h5"
                >
                  PR-123 Fix the bug
                </span>
              </div>
            </div>
            <div
              class="css-1yqbixt"
              id="notification-product"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  myorg/notifications-test
                </span>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-group"
            >
              <div
                class="css-5fz2td"
              >
                <span
                  class="css-x828h5"
                >
                  +
                  2
                   
                  other updates
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationContent.tsx > renders notification message, body and footer 1`] = `
<div>
  <div
    class="css-k5cxwk"
    data-testid="notification-details"
    id="notification-details"
  >
    <div
      class="cursor-pointer"
    >
      <div
        class="css-1926jks"
      >
        <div
          class="css-k5cxwk"
          id="notification-title"
        >
          <span
            class="css-1y3vbql"
          >
            #103: chore(deps): update dependency eslint
          </span>
            
          <em
            class="css-xlxqv6"
          >
            3 years ago
          </em>
        </div>
        <div
          class="css-k5cxwk"
          id="notification-metadata"
        >
          <div
            class="css-1926jks"
          >
            <div
              class="css-scnxu0"
              id="notification-entity"
            >
              <div
                class="css-5fz2td"
              >
                <div
                  aria-labelledby="_r_0_"
                  class="_12ji1r31 _1qu2glyw _12y3idpf _1e0c1o8l _kqswh2mm"
                  role="img"
                >
                  <span
                    class="_vchh1ntv _bfhkcxp3 _16qs1nhn _19itglyw _12ji1r31 _1qu2glyw _12y31o36 _1reo15vq _18m915vq _v564ieh6 _1e0c1txw _kqswpfqs _4cvr1fhb _1bah1h6o _2lx21bp4 _80om1kw7 _6rthv77o _1pfhv77o _12l2v77o _ahbqv77o _85i5ze3t _1q51ze3t _y4tize3t _bozgze3t _t9ec1aqe _9v7aze3t _qc5o1p41 _z0ai1osq _18postnw _1hfk1j28 _aetrf705 _1peqidpf _11fnglyw _1ejjglyw _mizu194a _1ah3v77o _ra3xnqa1 _128mdkaa _4dave4h9 _2rkol0p1 _1bsb7vkz _4t3i7vkz"
                    style="--avatar-bg-color: var(--ds-surface, #FFFFFF); --avatar-box-shadow: 0 0 0 2px var(--ds-surface, #FFFFFF);"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      class="_16jlkb7n _1o9zkb7n _i0dl1osq _1e0c1txw _1bsb1osq _4t3i1osq _2rkolb4i"
                      data-ssr-placeholder-ignored="true"
                      data-vc="avatar-image"
                      src="https://bbc-object-storage--frontbucket.us-east-1.prod.public.atl-paas.net/80907f89f58b/img/favicon.ico"
                    />
                  </span>
                  <span
                    hidden=""
                    id="_r_0_"
                  >
                    PR-123 Fix the bug
                  </span>
                </div>
                <span
                  class="css-x828h5"
                >
                  PR-123 Fix the bug
                </span>
              </div>
            </div>
            <div
              class="css-1yqbixt"
              id="notification-product"
            >
              <div
                class="css-1076utp"
              >
                <span
                  aria-label="Bitbucket"
                  class="_1e0c1o8l _4t3i7vkz _1b3i18uv _9aea18uv _3wu01fkg"
                  role="img"
                  style="--themed-icon-color: initial;"
                >
                  <svg
                    height="100%"
                    viewBox="0 0 24 24"
                  >
                    
    
                    <path
                      d="M0 6a6 6 0 0 1 6-6h12a6 6 0 0 1 6 6v12a6 6 0 0 1-6 6H6a6 6 0 0 1-6-6z"
                      fill="var(--tile-color,#94c748)"
                    />
                    
    
                    <path
                      d="m17.898 11.353-.994 6.064c-.065.367-.324.583-.691.583H7.787c-.367 0-.627-.216-.691-.583L5.346 6.604C5.28 6.237 5.476 6 5.82 6h12.358c.346 0 .54.237.475.604l-.475 2.85c-.065.41-.303.582-.691.582h-7.432c-.109 0-.173.065-.152.194l.584 3.583c.021.086.086.151.172.151h2.68c.086 0 .15-.065.172-.151l.41-2.59c.044-.324.26-.453.563-.453H17.4c.432 0 .562.216.497.582"
                      fill="var(--icon-color, #101214)"
                    />
                    

                  </svg>
                  

                </span>
                <span
                  class="css-x828h5"
                >
                  myorg/notifications-test
                </span>
              </div>
            </div>
            <div
              class="css-k5cxwk"
              id="notification-group"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
